vbnc/vbnc/tests/Errors/30200.vb
Class SomeClass

    Public Function Foo() As New System.Collections.Generic.List(Of String)
    End Function

End Class